# Fun_projects

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  PITFALLS.md  README.md  WHY.md  pyproject.toml
.githooks/: pre-commit
src/invaderforchiks/: __init__.py  __main__.py  config.py  enemies.py  game.py  hud.py  player.py  projectiles.py  sprites.py  starfield.py  title.py
test/: baselines.json  run_tests.sh  test_game.py
